add redis-proxy Dockerfile doc